--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: setup
-        run: apt update && apt install -y fish
+        run: sudo bash -c 'apt update && apt install -y fish'
 
       - name: test
         run: make
